--- a/accounts_app/templates/user_add.html
+++ b/accounts_app/templates/user_add.html
@@ -4,7 +4,7 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>Category Update Form</span>
+            <span>Category Add Form</span>
             <a href="../" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
         </h3>
     </div>
