--- a/prisoners_app/templates/prisoner_details.html
+++ b/prisoners_app/templates/prisoner_details.html
@@ -20,22 +20,30 @@
             <p>Last Name <i class="pull-right">:</i></p>
             <p>Email <i class="pull-right">:</i></p>
             <p>Identification <i class="pull-right">:</i></p>
-            <p>Case <i class="pull-right">:</i></p>
-            <p>Status <i class="pull-right">:</i></p>
+            <p>Phone <i class="pull-right">:</i></p>
             <p>Gender <i class="pull-right">:</i></p>
+            <p>Marital status <i class="pull-right">:</i></p>
             <p>Address <i class="pull-right">:</i></p>
+            <p>Entry date <i class="pull-right">:</i></p>
             <p>Release date <i class="pull-right">:</i></p>
+            <p>crime <i class="pull-right">:</i></p>
+            <p>Status <i class="pull-right">:</i></p>
+            <p>Cell No: <i class="pull-right">:</i></p>
           </div>
           <div class="span8">
             <p>{{prisoner.firstname}}</p>
             <p>{{prisoner.lastname}}</p>
             <p>{{prisoner.email}}</p>
             <p>{{prisoner.identification}}</p>
-            <p>{{prisoner.case}}</p>
-            <p>{{prisoner.status}}</p>
+            <p>{{prisoner.phone}}</p>
             <p>{{prisoner.gender}}</p>
+            <p>{{prisoner.marital_status}}</p>
             <p>{{prisoner.address}}</p>
+            <p>{{prisoner.entry_date}}</p>
             <p>{{prisoner.release_date}}</p>
+            <p>{{prisoner.crime}}</p>
+            <p>{{prisoner.status}}</p>
+            <p>{{prisoner.cell}}</p>
           </div>
         </div>
       </div>
