--- a/prisoners_app/templates/transfers.html
+++ b/prisoners_app/templates/transfers.html
@@ -5,7 +5,7 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>Transfers Table</span>
+            <span>All Transfers |{{transfers.count}}</span>
             <a href="{% url 'transfer_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
         </h3>
     </div>
