--- a/prisoners_app/templates/visitor_details.html
+++ b/prisoners_app/templates/visitor_details.html
@@ -19,12 +19,16 @@
               <p>Last Name <i class="pull-right">:</i></p>
               <p>identification <i class="pull-right">:</i></p>
               <p>Phone <i class="pull-right">:</i></p>
+              <p>Date <i class="pull-right">:</i></p>
+              <p>Visit reason <i class="pull-right">:</i></p>
             </div>
             <div class="span8">
               <p>{{visitor.firstname}}</p>
               <p>{{visitor.lastname}}</p>
               <p>{{visitor.identification}}</p>
               <p>{{visitor.phone}}</p>
+              <p>{{visitor.date}}</p>
+              <p>{{visitor.reason}}</p>
             </div>
             </div>
         </div>
