--- a/prisoners_app/templates/visitors.html
+++ b/prisoners_app/templates/visitors.html
@@ -5,7 +5,7 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>Visitors Table</span>
+            <span>All Visitors |{{visitors.count}}</span>
             <a href="{% url 'visitor_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
         </h3>
     </div>
