--- a/templates/base2.html
+++ b/templates/base2.html
@@ -84,7 +84,7 @@
         <!--/.wrapper end-->
         <div class="footer">
             <div class="container">
-                <b class="copyright">&copy; 2022 Prison-mis </b>All rights reserved.
+                <span class="copyright">&copy; 2022 Prison-mis </span>All rights reserved.
             </div>
         </div>
         <!--/.wrapper end-->
