--- a/prisoners_app/templates/cells.html
+++ b/prisoners_app/templates/cells.html
@@ -5,8 +5,8 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>Cases Table</span>
-            <a href="{% url 'case_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
+            <span>All cells |{{cells.count}}</span>
+            <a href="{% url 'cell_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
         </h3>
     </div>
     <div class="module-body table">
@@ -14,22 +14,20 @@
             <thead>
                 <tr>
                     <th>Order</th>
-                    <th>Case Name</th>
-                    <th>Decription</th>
-                    <th>Period</th>
+                    <th>Cell Name</th>
+                    <th>Status</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for case in cases %}  
+                {% for cell in cells %}  
                 <tr>
                     <td>{{forloop.counter}}</td>
-                    <td><a href="{% url 'case_details' case.id %}">{{case}}</a></td>
-                    <td>{{case.description}}</td>
-                    <td class="center">{{case.detention_period}}</td>
+                    <td><a href="{% url 'cell_details' cell.id %}">{{cell}}</a></td>
+                    <td>{{cell.status}}</td>
                     <td class="center">
-                        <a class="btn btn-xs btn-info" href="{% url 'case_update' case.id %}">Edit</a> / 
-                        <a class="btn btn-xs btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'case_delete' case.id %}" >Delete</a>
+                        <a class="btn btn-xs btn-info" href="{% url 'cell_update' cell.id %}">Edit</a> / 
+                        <a class="btn btn-xs btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'cell_delete' cell.id %}" >Delete</a>
                     </td>                
                 </tr>
                 {% endfor %}
@@ -40,7 +38,7 @@
             </tfoot>
         </table>
     </div>
-</div><!--/.cases module-->
+</div><!--/.cells module-->
 <div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm mymodal" role="document">
         
