--- a/prisoners_app/templates/crime_add.html
+++ b/prisoners_app/templates/crime_add.html
@@ -4,7 +4,7 @@
 <div class="module">  
     <div class="module-head">
         <h3>
-            <span>Case Add Form</span>
+            <span>Crime Add Form</span>
             <a href="../" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
         </h3>
     </div>
