--- a/prisoners_app/templates/crimes.html
+++ b/prisoners_app/templates/crimes.html
@@ -5,8 +5,8 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>All Complains |{{complains.count}}</span>
-            <a href="{% url 'complain_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
+            <span>All Crimes |{{crimes.count}}</span>
+            <a href="{% url 'crime_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
         </h3>
     </div>
     <div class="module-body table">
@@ -14,26 +14,22 @@
             <thead>
                 <tr>
                     <th>Order</th>
-                    <th>Prisoner</th>
-                    <th>Summary</th>
-                    <th>Replied</th>
-                    <th>Status</th>
-                    <th>Date</th>
+                    <th>Crime Name</th>
+                    <th>Decription</th>
+                    <th>Period</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for complain in complains %}  
+                {% for crime in crimes %}  
                 <tr>
                     <td>{{forloop.counter}}</td>
-                    <td><a href="{% url 'complain_details' complain.id %}">{{complain}}</a></td>
-                    <td>{{complain.summary}}</td>
-                    <td>{{complain.replied}}</td>
-                    <td>{{complain.status}}</td>
-                    <td>{{complain.date}}</td>
+                    <td><a href="{% url 'crime_details' crime.id %}">{{crime}}</a></td>
+                    <td>{{crime.description}}</td>
+                    <td class="center">{{crime.detention_period}}</td>
                     <td class="center">
-                        <a class="btn btn-xs btn-info" href="{% url 'complain_update' complain.id %}">Edit</a> / 
-                        <a class="btn btn-xs btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'complain_delete' complain.id %}" >Delete</a>
+                        <a class="btn btn-xs btn-info" href="{% url 'crime_update' crime.id %}">Edit</a> / 
+                        <a class="btn btn-xs btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'crime_delete' crime.id %}" >Delete</a>
                     </td>                
                 </tr>
                 {% endfor %}
@@ -44,7 +40,7 @@
             </tfoot>
         </table>
     </div>
-</div><!--/.complains module-->
+</div><!--/.crimes module-->
 <div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm mymodal" role="document">
         
