--- a/prisoners_app/templates/leave_add.html
+++ b/prisoners_app/templates/leave_add.html
@@ -1,5 +1,8 @@
 {% extends 'base1.html' %}
 {% load crispy_forms_tags %}
+{{l_form.media}}
+{% block stylesheet%}
+{% endblock %}
 {% block content %}
 <div class="module">  
     <div class="module-head">
