--- a/prisoners_app/templates/leaves.html
+++ b/prisoners_app/templates/leaves.html
@@ -5,7 +5,7 @@
 <div class="module">
     <div class="module-head">
         <h3>
-            <span>Leaves Table</span>
+            <span>All Leaves |{{leaves.count}}</span>
             <a href="{% url 'leave_add' %}" class="btn btn-primary pull-right" style="border-radius:50%">Add +</a>
         </h3>
     </div>
@@ -15,8 +15,6 @@
                 <tr>
                     <th>Order</th>
                     <th>Prisoner</th>
-                    <th>Start date</th>
-                    <th>End date</th>
                     <th>Reason</th>
                     <th>Approval</th>
                     <th>Status</th>
@@ -28,8 +26,6 @@
                 <tr>
                     <td>{{forloop.counter}}</td>
                     <td><a href="{% url 'leave_details' leave.id %}">{{leave.prisoner}}</a></td>
-                    <td>{{leave.start_date}}</td>
-                    <td>{{leave.end_date}}</td>
                     <td>{{leave.reason}}</td>
                     <td>{{leave.approval}}</td>
                     <td class="center">{{leave.status}}</td>
@@ -45,6 +41,8 @@
                 </tr>
             </tfoot>
         </table>
+
+
     </div>
 </div><!--/.leaves module-->
 <div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalLabel" aria-hidden="true">
@@ -52,6 +50,81 @@
         
     </div>
 </div><!-- /.delete modal -->
+
+<div class="module message">
+    <div class="module-head">
+        <h3>Task Management Tool</h3>
+    </div>
+    <div class="module-option clearfix">
+        <div class="pull-left">
+            Filter : &nbsp;
+            <div class="btn-group">
+                <button class="btn">All</button>
+                <button class="btn dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">All</a></li>
+                    <li><a href="#">In Progress</a></li>
+                    <li><a href="#">Done</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">New task</a></li>
+                    <li><a href="#">Overdue Task</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="pull-right">
+            <a href="#" class="btn btn-primary">Create Task</a>
+        </div>
+    </div>
+    <div class="module-body table">								
+
+        <table class="table table-message">
+            <tbody>
+                <tr class="heading">
+                    <td class="cell-icon"></td>
+                    <td class="cell-title">Task</td>
+                    <td class="cell-status hidden-phone hidden-tablet">Status</td>
+                    <td class="cell-time align-right">Due Date</td>
+                </tr>
+                <tr class="task">
+                    <td class="cell-icon"><i class="icon-checker high"></i></td>
+                    <td class="cell-title"><div>Lorem ipsum dolor sit et, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td>
+                    <td class="cell-status hidden-phone hidden-tablet"><b class="due">Missed</b></td>
+                    <td class="cell-time align-right">Just Now</td>
+                </tr>
+                <tr class="task">
+                    <td class="cell-icon"><i class="icon-checker"></i></td>
+                    <td class="cell-title"><div>Lorem ipsum dolor sit et, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td>
+                    <td class="cell-status hidden-phone hidden-tablet"><b class="due">Missed</b></td>
+                    <td class="cell-time align-right">Just Now</td>
+                </tr>
+                <tr class="task">
+                    <td class="cell-icon"><i class="icon-checker"></i></td>
+                    <td class="cell-title"><div>Lorem ipsum dolor sit et, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td>
+                    <td class="cell-status hidden-phone hidden-tablet"><b class="due">Missed</b></td>
+                    <td class="cell-time align-right">Yesterday</td>
+                </tr>
+                <tr class="task resolved">
+                    <td class="cell-icon"><i class="icon-checker high"></i></td>
+                    <td class="cell-title"><div>Lorem ipsum dolor sit et, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td>
+                    <td class="cell-status hidden-phone hidden-tablet"></td>
+                    <td class="cell-time align-right">15 July 2014</td>
+                </tr>
+                <tr class="task resolved">
+                    <td class="cell-icon"><i class="icon-checker high"></i></td>
+                    <td class="cell-title"><div>Lorem ipsum dolor sit et, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td>
+                    <td class="cell-status hidden-phone hidden-tablet"></td>
+                    <td class="cell-time align-right">15 July 2014</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+    </div>
+    <div class="module-foot">
+    </div>
+</div>
 {% endblock %}
 {% block script %}
 <script src="{% static 'scripts/modal_delete.js' %}" type="text/javascript"></script>
