--- a/templates/base1.html
+++ b/templates/base1.html
@@ -10,7 +10,7 @@
         {% block title %}
         <title>Prison-mis</title>
         {% endblock %}
-        <link type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+        <!-- <link type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"> -->
         <link type="text/css" href="{% static 'bootstrap/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
         <link type="text/css" href="{% static 'css/theme.css' %}" rel="stylesheet">
         <link type="text/css" href="{% static 'css/columns.css' %}" rel="stylesheet">
@@ -103,13 +103,14 @@
                             <!--/.widget-nav-->
                             <ul class="widget widget-menu unstyled">
                                 <li><a href="{% url 'prisoners' %}"><i class="menu-icon icon-bold"></i> Prisoners </a></li>
-                                <li><a href="{% url 'cases' %}"><i class="menu-icon icon-book"></i>Cases </a></li>
-                                <li><a href="{% url 'leaves' %}"><i class="menu-icon icon-paste"></i>Leaves <b class="label orange pull-right">
-                                    11</b></a></li>
-                                <li><a href="{% url 'visitors' %}"><i class="menu-icon icon-table"></i>Visitors </a></li>
+                                <li><a href="{% url 'crimes' %}"><i class="menu-icon icon-book"></i>Crimes </a></li>
+                                <li><a href="{% url 'cells' %}"><i class="menu-icon icon-book"></i>Cells </a></li>
+                            </ul>
+                            <ul class="widget widget-menu unstyled">
+                                <li><a href="{% url 'leaves' %}"><i class="menu-icon icon-paste"></i>Leaves <b class="label orange pull-right">11</b></a></li>
                                 <li><a href="{% url 'transfers' %}"><i class="menu-icon icon-table"></i>Transfers </a></li>
-                                <li><a href="{% url 'complains' %}"><i class="menu-icon icon-bar-chart"></i>Complains <b class="label green pull-right">
-                                    3</b></a></li>
+                                <li><a href="{% url 'complains' %}"><i class="menu-icon icon-bar-chart"></i>Complains <b class="label green pull-right">3</b></a></li>
+                                <li><a href="{% url 'visitors' %}"><i class="menu-icon icon-table"></i>Visitors </a></li>
                             </ul>
                             <!--/.widget-nav-->
                             <ul class="widget widget-menu unstyled">
@@ -147,7 +148,7 @@
         <!--/.wrapper end-->
         <div class="footer">
             <div class="container">
-                <b class="copyright">&copy; 2022 Prison-mis </b>All rights reserved.
+                <span class="copyright">&copy; 2022 Prison-mis </spam>All rights reserved.
             </div>
         </div>
         <!--/.wrapper end-->
